--- a/Programación/JS/Relación 3/34.html
+++ b/Programación/JS/Relación 3/34.html
@@ -2,7 +2,7 @@
 
 let numba = Number(prompt("Numba"))
 let primo = true
-    for (i=2;i<numba;i++){
+    for (i=2;i<numba&&primo;i++){
         if (numba%i == 0) {
             primo = false
         } 
