--- a/Programación/JS/Relación 3/35.html
+++ b/Programación/JS/Relación 3/35.html
@@ -19,7 +19,7 @@
         } 
 
         }
-        console.log("NO primo but este si :" + nextprimo)
+        console.log("NO primo but este si :" + numba)
     } else {
         console.log(" Es primo")
     }
