--- a/Programación/JS/Relación 3/35.html
+++ b/Programación/JS/Relación 3/35.html
@@ -7,13 +7,13 @@
                 primo = false
             } 
         } 
-        
+   let newnumba = numba   
     if (primo == false){
         let nextprimo = false
-        for (i=numba;nextprimo;i++){
-            numba = numba+1
+        for (i=newnumba;nextprimo;i++){
+            newnumba = newnumba+1
             for (i=2;i<numba;i++){
-            if (numba%i == 0) {
+            if (newnumba%i == 0) {
                 nextprimo = true
                 console.log("NO primo but este si :" + numba)
             } 
