--- a/Programación/JS/Relación 3/35.html
+++ b/Programación/JS/Relación 3/35.html
@@ -15,7 +15,7 @@
             for (i=2;i<numba;i++){
             if (newnumba%i == 0) {
                 nextprimo = true
-                console.log("NO primo but este si :" + numba)
+                console.log("NO primo but este si :" + newnumba)
             } 
         } 
 
