--- a/Programación/JS/Relación 3/35.html
+++ b/Programación/JS/Relación 3/35.html
@@ -10,7 +10,7 @@
    let newnumba = numba   
     if (primo == false){
         let nextprimo = false
-        for (i=newnumba&&nextprimo;i++){
+        for (i=newnumba;nextprimo==true;i++){
             newnumba = newnumba+1
             for (i=2;i<numba;i++){
             if (newnumba%i == 0) {
