--- a/Programación/JS/Relación 3/35.html
+++ b/Programación/JS/Relación 3/35.html
@@ -9,15 +9,15 @@
         } 
    let newnumba = numba   
     if (primo == false){
-        let nextprimo = false
+        let nextprimo = true
         for (i=newnumba;nextprimo==true;i++){
             newnumba = newnumba+1
-            for (i=2;i<numba;i++){
-            if (newnumba%i == 0) {
-                nextprimo = true
-                console.log("NO primo but este si :" + newnumba)
+            for (i=2;i<newnumba;i++){
+                if (newnumba%i == 0) {
+                    nextprimo = false
+                    console.log("NO primo but este si :" + newnumba)
+                } 
             } 
-        } 
 
         }
         console.log("NO primo but este si :" + numba)
