--- a/Programación/JS/Relación 3/35.html
+++ b/Programación/JS/Relación 3/35.html
@@ -11,7 +11,7 @@
    let nextprimo = true 
     if (primo == false){
         for (newnumba;nextprimo;newnumba++){
-            for (i=2;i<newnumba&&nextprimo;i++){
+            for (i=2;i<newnumba;i++){
                 if (newnumba%i==0){
                     nextprimo = false
                     console.log("NO primo but este si :" + newnumba)
