--- a/Programación/JS/Relación 3/35.html
+++ b/Programación/JS/Relación 3/35.html
@@ -8,17 +8,20 @@
             } 
         } 
    let newnumba = numba  
-   let nextprimo = true 
+    
     if (primo == false){
-        for (newnumba;nextprimo;newnumba++){
-            for (i=2;i<newnumba;i++){
-                if (newnumba%i==0){
+        if (nextprimo==false){
+            let nextprimo=true
+            newnumba = newnumba+1
+            for (i=2;i<newnumba&&nextprimo;i++){
+                if (nextprimo%i == 0) {
                     nextprimo = false
-                    console.log("NO primo but este si :" + newnumba)
-                }
-            }
+                } 
+            } 
+        } else {
+            console.log("NO primo but este si :" + newnumba)
         }
-        console.log("NO primo but este si :" + newnumba)
+        
     } else {
         console.log(" Es primo")
     }
