--- a/Programación/JS/Relación 3/35.html
+++ b/Programación/JS/Relación 3/35.html
@@ -8,7 +8,7 @@
             } 
         } 
    let newnumba = numba  
-    
+   let nextprimo=false
     if (primo == false){
         if (nextprimo==false){
             let nextprimo=true
