--- a/Programación/JS/Relación 3/40.html
+++ b/Programación/JS/Relación 3/40.html
@@ -10,10 +10,7 @@
         let asdf = Number(0)
         asdf = parseInt(numba/Math.pow(10,(iterations-i-1)))
         numba = numba - (Math.pow(10,(iterations-i-1)))*asdf
-        console.log("Power"+Math.pow(10,(iterations-i-1)))
-        console.log("Asdf"+i+" "+asdf)
-        console.log("Numba"+numba)
         suma = (suma+asdf)
     }
-    console.log(suma)
+    console.log("La suma de los digitos es: "+suma)
 </script>
