--- a/Programación/JS/Relación 3/40.html
+++ b/Programación/JS/Relación 3/40.html
@@ -10,7 +10,7 @@
         iterations2=j
     }
     
-    for (i=0;i<iterations;i++){
+    for (i=0;i<iterations2;i++){
         let asdf = Number(0)
         asdf = parseInt(numba/Math.pow(10,(iterations-i-1)))
         numba = numba - (Math.pow(10,(iterations-i-1)))*asdf
