--- a/Programación/JS/Relación 3/40.html
+++ b/Programación/JS/Relación 3/40.html
@@ -12,8 +12,8 @@
     
     for (i=0;i<iterations2;i++){
         let asdf = Number(0)
-        asdf = parseInt(numba/Math.pow(10,(iterations-i-1)))
-        numba = numba - (Math.pow(10,(iterations-i-1)))*asdf
+        asdf = parseInt(numba/Math.pow(10,(iterations2-i-1)))
+        numba = numba - (Math.pow(10,(iterations2-i-1)))*asdf
         suma = (suma+asdf)
     }
     console.log(suma)
