--- a/Programación/JS/Relación 4/7.html
+++ b/Programación/JS/Relación 4/7.html
@@ -1,4 +1,52 @@
 <script>
+let numeroUsuario
+let digito
+let cifrasRestantes
+let resto
+let apariciones
 
+while (numeroUsuario != "SALIR" && digito != "SALIR") {
+
+    numeroUsuario = prompt("Introduce un número:")
+
+    if (numeroUsuario != "SALIR") {
+
+        numeroUsuario = Number(numeroUsuario)
+
+        if (numeroUsuario >= 0) {
+
+            digito = -1
+            while (digito != "SALIR" && (digito < 0 || digito > 9)) {
+                digito = prompt("Introduce un dígito:")
+
+                if (digito != "SALIR") {
+                    digito = Number(digito)
+                    if (digito < 0 || digito > 9) {
+                        alert("¡Dígito incorrecto!")
+                    }
+                }
+            }
+
+            if (digito != "SALIR") {
+                apariciones = 0
+                cifrasRestantes = numeroUsuario
+
+                while (cifrasRestantes != 0) {
+                    resto = cifrasRestantes % 10
+                    cifrasRestantes = parseInt(cifrasRestantes / 10)
+
+                    if (resto == digito) {
+                        apariciones++
+                    }
+
+                }
+
+                alert("El dígito " + digito + " aparece " + apariciones + " veces en el número " + numeroUsuario)
+            }
+        } else {
+            alert("¡Número incorrecto!")
+        }
+    }
+}
 
 </script>
