--- a/Programación/JS/Relación 4/Simulacro 1.html
+++ b/Programación/JS/Relación 4/Simulacro 1.html
@@ -4,33 +4,32 @@
     let expensesday
     let kmday
     let expensetotal = 0
-    let kmtotal
+    let kmtotal =0
     let overbudget = false
     console.log("Presupuesto "+budget)
-    console.log("días "+numdays)
+    console.log("Días "+numdays)
     
     if (numdays>0 && budget > 0){
         for (i=1;i<numdays+1 && overbudget==false;i++){
             expensesday = Number(prompt("Introduce los gastos del día "+i+": "))
             kmday = Number(prompt("Introduce los kilómetros recorridos en el día "+i+": "))
             expensetotal = expensetotal+expensesday
-            
+            kmtotal=kmtotal+kmday
             if (expensetotal<=budget){
-                kmtotal=kmtotal+kmday
                 console.log("Día "+i+" :")
                 console.log("Gastos del día "+i+": "+expensesday)
                 console.log("Kilómetros del día "+i+": "+kmday)
             }else {
                 overbudget=true
-                alert("¡Alerta! Has superado el presupuesto de [presupuesto].")
+                alert("¡Alerta! Has superado el presupuesto de "+budget)
             }
-            if (i=(numdays+2) && overbudget==false){
+            if (i==(numdays) && overbudget==false){
                 let expenseavg = expensetotal/numdays
                 let budgetpercent = (1-((budget-expensetotal)/budget))*100
                 console.log("Resumen del viaje: ")
                 console.log("- Total de kilómetros recorridos: "+kmtotal)
                 console.log("- Gasto diario medio: "+expenseavg)
-                console.log("- Porcentaje del presupuesto gastado: "+budgetpercent)
+                console.log("- Porcentaje del presupuesto gastado: "+budgetpercent+"%")
             }
         }
     } else {
