--- a/Lenguaje de Marcas/Tema 2/Ejercicio 1/index.html
+++ b/Lenguaje de Marcas/Tema 2/Ejercicio 1/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#servicio1">Servicio1</a></li>
                 <li><a href="#servicio2">Servicio2</a></li>
                 <li><a href="#servicio3">Servicio3</a></li>
-                <li><a href="#testimoniosClientes">Servicio3</a></li>
+                <li><a href="#testimoniosClientes">Testimonios de Clientes</a></li>
             </ul>
         </nav>
     </header>
@@ -31,7 +31,6 @@
                 <figcaption>Esta es el serivicio 1.</figcaption>
             </figure>
         </section>
-
         <section id="servicio2">
             <h2>Servicio 2</h2>
             <p>Este es un ejemplo de servicio.</p>
@@ -40,7 +39,6 @@
                 <figcaption>Esta es el serivicio 2.</figcaption>
             </figure>
         </section>
-
         <section id="servicio3">
             <h2>Servicio 3</h2>
             <p>Este es un ejemplo de servicio.</p>
@@ -53,7 +51,6 @@
                 <figcaption>Esta es el serivicio 3. Con video y todo flipas tt</figcaption>
             </figure>
         </section>
-
         <section id="testimoniosClientes">
             <h2>Testimonios de Clientes</h2>
             <blockquote>
@@ -67,11 +64,9 @@
             </blockquote>
               
         </section>
-
-
     </main>
     <footer>
-        <p>&copy; 2024 Mi página web. Todos los derechos reservados.</p>
+        <p>&copy; 2024 CopyMaster. Todos los derechos reservados.</p>
     </footer>
 </body>
 
